fix: implemented ag-root-wrapper css to prevent layout shifts

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,3 +30,8 @@ body {
     overflow: hidden;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.08);
 }
+
+.ag-root-wrapper {
+    border: none !important;
+}
+
